k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finwise-ingress
  namespace: finwise
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: api.finwise.local
    http:
      paths:
      - path: /auth(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth
            port:
              number: 8082
      - path: /transactions(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: transactions
            port:
              number: 8080
      - path: /ml(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ml-api
            port:
              number: 8081
      - path: /prometheus(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus
            port:
              number: 9090
